--- a/packages/docs/src/styles/_sections.scss
+++ b/packages/docs/src/styles/_sections.scss
@@ -38,6 +38,13 @@
 
 // Section-Specific Styles
 
+#{section-id("components.button-group")} {
+  .docs-button-group-example-set .pt-button-group {
+    margin-top: $pt-grid-size * 2;
+    margin-left: $pt-grid-size * 2;
+  }
+}
+
 #{section-id("components.forms.checkbox")},
 #{section-id("components.forms.radio")},
 #{section-id("components.forms.switch")} {
@@ -54,7 +61,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: $pt-grid-size * 13;
+
+  > .pt-control-group:not(:last-child) {
+    margin-bottom: $pt-grid-size * 2;
+  }
 }
 
 #{section-name("Inline controls")} {
